--- a/src/scss/blocks/_promo.scss
+++ b/src/scss/blocks/_promo.scss
@@ -1,11 +1,15 @@
 .promo{
-    &__left{
+    position: relative;
+    &__wrap{
         height: 363px;
+    }
+    &__left{
+        height: inherit;
         display: none;
     }
     &__right{
         background-color: #F1E4E6;
-        height: 363px;
+        height: inherit;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -27,6 +31,15 @@
         span{
             color: #F16D7F;
         }
+    }
+    &__dark{
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%; 
+        background-color: rgba(0, 0, 0, 0.5);
+        display: none;
     }
 
 }
@@ -56,9 +69,12 @@
 }
 @media (min-width: 1024px){
     .promo{
+        &__wrap{
+            height: 764px;
+        }
         &__left,
         &__right{
-            height: 764px;
+            height: inherit;
         }
         &__left{
             background-image: url(../img/promo_big.jpg);
