--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -4,9 +4,15 @@
 @import "base/my_resets";
 @import "blocks/header";
 @import "blocks/promo";
+@import "blocks/categories";
+@import "blocks/menu";
 
 .center{
     padding: 0 16px;
+}
+.hidden{
+    display: block;
+    height: inherit;
 }
 @media (min-width: 768px){
     .center{
