created products section

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6,6 +6,8 @@
 @import "blocks/promo";
 @import "blocks/categories";
 @import "blocks/menu";
+@import "blocks/product";
+@import "blocks/products";
 
 .center{
     padding: 0 16px;
