--- a/src/scss/blocks/_menu.scss
+++ b/src/scss/blocks/_menu.scss
@@ -19,6 +19,7 @@
         color: #000000;
         text-transform: uppercase;
         margin-bottom: 4px;
+        margin-top: 8px;
         padding-left: 0!important;
     }
     &__list{
