--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -8,6 +8,9 @@
 @import "blocks/menu";
 @import "blocks/product";
 @import "blocks/products";
+@import "blocks/servises";
+@import "blocks/subscribe";
+@import "blocks/footer";
 
 .center{
     padding: 0 16px;
