--- a/src/scss/blocks/_product.scss
+++ b/src/scss/blocks/_product.scss
@@ -1,4 +1,12 @@
 .product{
+    transition: 0.5s;
+    &:hover{
+        transform: scale(1.05);
+        box-shadow: 0 0 5px rgba(0,0,0, 0.5);
+    }
+    &:hover .product__hover{
+        display: flex;
+    }
     img{
         width: 100%;
         height: inherit;
@@ -30,5 +38,54 @@
         font-size: 16px;
         line-height: 19px;
         color: #F16D7F;
+    }
+    &__img-block{
+        position: relative;
+    }
+    &__hover{
+        display: none;
+        position: absolute;
+        top: 0;
+        left: 0;
+        background: rgba(58, 56, 56, 0.86);
+        width: 100%;
+        height: 100%;
+        justify-content: center;
+        align-items: center;
+    }
+    &__add-to-cart{
+        width: 138px;
+        height: 43px;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 17px;
+        color: #FFFFFF;
+        border: 1px solid #fff;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+        transition: 0.3s;
+        img{
+            width: 26px;
+            height: 24px;
+        }
+        &:hover{
+            box-shadow: 0 0 10px #fff;
+        }
+        &:active{
+            box-shadow: none;
+        }
+    }
+}
+@media (max-width: 1023px){
+    .product{
+        &:hover{
+            transform: scale(1);
+            box-shadow: none;
+        }
+        &:hover .product__hover{
+            display: flex;
+        }
     }
 }
